# clarifai-rust-grpc

./: Cargo.toml  README.md  cargo.toml-E  rustfmt.toml
.github/workflows/: publish.yml  run-tests.yml
src/: extension.rs  extensions.rs  lib.rs  main.rs  scope.rs  service.rs  test_proto.rs
src/grpc/: annotations.rs  extension.rs  extensions.rs  http.rs  matrix.rs  mod.rs  resources.rs  scope.rs  service.rs  service_grpc.rs  status.rs  status_code.rs  test_proto.rs  types.rs
tests/: integration_tests.rs
