[package]
name = "clarifai_grpc"
version = "7.4.0"
authors = ["Clarifai <rok.povsic@clarifai.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["ai", "image-recognition", "deep-learning", "neural-networks", "clarifai"]
categories = ["computer-vision", "text-processing", "api-bindings"]
description = "The official Clarifai gRPC Rust client"
homepage = "https://www.clarifai.com/"
documentation = "https://docs.clarifai.com/"
repository = "https://github.com/Clarifai/clarifai-rust-grpc"

[dependencies]
grpcio = "0.6.0"
protobuf = "2.0"
futures = "0.3"
